discussion/kv_engine/177006/177006_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

[serverless] Add Dcp throttling and metering test

Add unit tests to verify that Throttling and Metering works
over DCP

Change-Id: Iab9d25c980d7d115d2783ba485177cafda652381

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:30:11.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:34:47.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47318/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39772/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39772/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20792/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20792/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21432/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28825/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19666/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8330/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8330/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8231/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8231/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20444/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20444/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18560/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9: error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
        EXPECT_TRUE(rsp.isSuccess()) << rsp.getStatus();
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18560/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18560/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17712/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
